handle rich presence strings

--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,7 @@
             <!--<p><input type="text" id="message_box" name="message_box"><button onclick="onSendClick()" type="button" id="message_button" name="message_button">Send</button></p>-->
             <p id="output"></p>
             <p id="socket_data"></p>
+            <p id="rich_presence"></p>
         </div>
         <hr>
         <div id="div_namelist">
