--- a/example/index.html
+++ b/example/index.html
@@ -13,29 +13,35 @@
                 <button onclick="onConnectClick()" type="button" id="connect_button" name="connect_button">Connect</button>
             </p>
             <!--<p><input type="text" id="message_box" name="message_box"><button onclick="onSendClick()" type="button" id="message_button" name="message_button">Send</button></p>-->
-            <p id="output"></p>
-            <p id="socket_data"></p>
-            <p id="rich_presence"></p>
+            <p id="output">
+                <!-- populated by example.js -->
+            </p>
+            <p id="socket_data">
+                <!-- populated by example.js -->
+            </p>
+            <p id="rich_presence">
+                <!-- populated by example.js -->
+            </p>
         </div>
         <hr>
         <div id="div_namelist">
             <p>Player List</p>
             <div id="div_namelist_inner">
-            <!-- populated by example.js -->
+                <!-- populated by example.js -->
             </div>
         </div>
         <hr>
         <div id="div_scoreboard">
             <p>Scores</p>
             <div id="div_scoreboard_inner">
-            <!-- populated by example.js -->
+                <!-- populated by example.js -->
             </div>
         </div>
         <hr>
         <div id="div_map">
             <p>Map</p>
             <div id="div_map_inner">
-            <!-- populated by example.js -->
+                <!-- populated by example.js -->
             </div>
         </div>
     </body>
