add parsing player position updates add minimap to HTML example

--- a/example/index.html
+++ b/example/index.html
@@ -41,7 +41,9 @@
         <div id="div_map">
             <p>Map</p>
             <div id="div_map_inner">
-                <!-- populated by example.js -->
+                <canvas id="game_canvas" width="560" height="320">
+                    <!-- populated by example.js -->                    
+                </canvas>
             </div>
         </div>
     </body>
